--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
 		<title>aaa</title>
 	</head>
 	<body>
-		<h1>boa noite</h1>
+		<h1 style="color:blue;">boa noite</h1>
 		<h2>boa tarde</h2>
 		<h3>bom dia</h3>
 	</body>
